--- a/1_웹개발기초/clone_page/movis.html
+++ b/1_웹개발기초/clone_page/movis.html
@@ -34,6 +34,10 @@
         gap: 20px;
       }
 
+      i {
+        cursor: pointer;
+      }
+
       nav i {
         margin: 10px;
         padding: 10px;
@@ -86,6 +90,11 @@
       .main-title {
         font-size: 60px;
         font-weight: bolder;
+      }
+
+      .main-text-wrap {
+        width: 100%;
+        height: 50vh;
       }
 
       .main-text {
@@ -166,7 +175,7 @@
         </div>
 
         <div class="main-content">
-          <div class="main-text">
+          <div class="main-text-wrap">
             <div class="main-text slide active">
               <p class="main-title">
                 <span
@@ -180,7 +189,7 @@
               <p class="main-title">
                 <span>소프트웨어의 힘으로 <br />미래를 움직입니다.</span>
               </p>
-              <p class="main-detail slide">
+              <p class="main-detail">
                 현대모비스는 소프트웨어와 하드웨어를 결합한 차별화된 모빌리티
                 솔루션을 제공합니다.
               </p>
