main-content 왼쪽 위 이동

--- a/1_웹개발기초/clone_page/movis.html
+++ b/1_웹개발기초/clone_page/movis.html
@@ -22,9 +22,23 @@
       }
 
       header {
+        position: absolute;
         display: flex;
         justify-content: space-between;
-        padding: 0 30px;
+        align-items: center;
+        z-index: 10;
+        height: 90px;
+        width: 100%;
+        padding: 0px 50px;
+      }
+
+      main {
+        height: 120vh;
+      }
+
+      .logo {
+        width: 112px;
+        height: 38px;
       }
 
       nav {
@@ -44,17 +58,15 @@
         color: white;
       }
 
-      .logo {
-        margin: 25px 0px 0px 0px;
-        width: 60%;
+      .menu-wrap {
+        display: flex;
+        gap: 70px;
       }
 
       .menu {
         color: white;
-        font-weight: bold;
+        font-size: larger;
         cursor: pointer;
-        margin: 20px;
-        align-items: center;
       }
 
       .icon {
@@ -63,38 +75,44 @@
       }
 
       .main-wrap {
-        display: flex;
-        position: relative;
-        flex-direction: row;
+        /* display: flex;
+        flex-direction: column; */
+        /* height: 100%; */
       }
 
       .video-wrap {
-        height: 90%;
+        position: relative;
+        height: 100%;
+        width: 100%;
       }
 
       .background-video {
-        top: 0;
-        left: 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
       }
 
       .main-content {
-        position: absolute;
-        width: 100%;
+        display: flex;
         color: white;
-        /* margin-left: 50px; */
+        flex-direction: column;
+        align-content: space-between;
+        width: 100%;
+        height: 100%;
+      }
+
+      .main-text-wrap {
+        display: flex;
+        width: 100%;
+        height: 50vh;
+        padding: 0px 50px;
+        top: 50%;
+        align-content: center;
       }
 
       .main-title {
         font-size: 60px;
         font-weight: bolder;
-      }
-
-      .main-text-wrap {
-        width: 100%;
-        height: 50vh;
       }
 
       .main-text {
@@ -139,19 +157,19 @@
   </head>
   <body>
     <header>
-      <div class="">
-        <img
-          class="logo"
-          src="https://www.mobis.com/resources/img/renew/common/logo_w.png"
-          alt=""
-        />
-      </div>
+      <img
+        class="logo"
+        src="https://www.mobis.com/resources/img/renew/common/logo_w.png"
+        alt=""
+      />
       <nav>
-        <div class="menu">회사정보</div>
-        <div class="menu">모빌리티 기술</div>
-        <div class="menu">지속가능 경영</div>
-        <div class="menu">투자정보</div>
-        <div class="icon">
+        <div class="menu-wrap">
+          <p class="menu">회사정보</p>
+          <p class="menu">모빌리티 기술</p>
+          <p class="menu">지속가능 경영</p>
+          <p class="menu">투자정보</p>
+        </div>
+        <div class="icon-wrap">
           <i class="fa-regular fa-bell"></i>
           <i class="fa-solid fa-share-nodes"></i>
           <i class="fa-solid fa-globe"></i>
@@ -175,41 +193,43 @@
         </div>
 
         <div class="main-content">
-          <div class="main-text-wrap">
-            <div class="main-text slide active">
-              <p class="main-title">
-                <span
-                  >Lead the Shift in <br />Mobility, <br />Move the World beyond
-                  <br />Possibilities</span
-                >
-              </p>
+          <div class="main-slide-wrap">
+            <div class="main-text-wrap">
+              <div class="main-text slide active">
+                <p class="main-title">
+                  <span
+                    >Lead the Shift in <br />Mobility, <br />Move the World
+                    beyond <br />Possibilities</span
+                  >
+                </p>
+              </div>
+
+              <div class="main-text slide">
+                <p class="main-title">
+                  <span>소프트웨어의 힘으로 <br />미래를 움직입니다.</span>
+                </p>
+                <p class="main-detail">
+                  현대모비스는 소프트웨어와 하드웨어를 결합한 차별화된 모빌리티
+                  솔루션을 제공합니다.
+                </p>
+              </div>
+
+              <div class="main-text slide">
+                <p class="main-title">미래 모빌리티 기술을 이끌어 갑니다.</p>
+                <p class="main-detail">
+                  현대모비스는 보다 깨끗하고 안전한 이동 환경 혁신을 추구합니다
+                </p>
+              </div>
             </div>
 
-            <div class="main-text slide">
-              <p class="main-title">
-                <span>소프트웨어의 힘으로 <br />미래를 움직입니다.</span>
-              </p>
-              <p class="main-detail">
-                현대모비스는 소프트웨어와 하드웨어를 결합한 차별화된 모빌리티
-                솔루션을 제공합니다.
-              </p>
+            <div class="controls">
+              <i class="fa-regular fa-circle-dot dot active"></i>
+              <i class="fa-solid fa-circle dot"></i>
+              <i class="fa-solid fa-circle dot"></i>
+              <i class="fa-solid fa-play"></i>
+              <i id="prev" class="fa-solid fa-angle-left"></i>
+              <i id="next" class="fa-solid fa-angle-right"></i>
             </div>
-
-            <div class="main-text slide">
-              <p class="main-title">미래 모빌리티 기술을 이끌어 갑니다.</p>
-              <p class="main-detail">
-                현대모비스는 보다 깨끗하고 안전한 이동 환경 혁신을 추구합니다
-              </p>
-            </div>
-          </div>
-
-          <div class="controls">
-            <i class="fa-regular fa-circle-dot dot active"></i>
-            <i class="fa-solid fa-circle dot"></i>
-            <i class="fa-solid fa-circle dot"></i>
-            <i class="fa-solid fa-play"></i>
-            <i id="prev" class="fa-solid fa-angle-left"></i>
-            <i id="next" class="fa-solid fa-angle-right"></i>
           </div>
 
           <div class="main-menu-wrap">
