--- a/1_웹개발기초/clone_page/movis.html
+++ b/1_웹개발기초/clone_page/movis.html
@@ -222,7 +222,7 @@
             </div>
 
             <div class="controls">
-              <i class="fa-regular fa-circle-dot dot active"></i>
+              <i class="fa-regular fa-circle-dot dot"></i>
               <i class="fa-solid fa-circle dot"></i>
               <i class="fa-solid fa-circle dot"></i>
               <i class="fa-solid fa-play"></i>
