--- a/1_웹개발기초/clone_page/movis.html
+++ b/1_웹개발기초/clone_page/movis.html
@@ -129,7 +129,7 @@
       </div>
     </main>
 
-    <section>
+    <section class="main-sec02">
       <div class="news-section">
         <div class="news-wrap">
           <div class="news active">
@@ -203,13 +203,13 @@
               <p class="detail">자세히보기</p>
             </div>
           </div>
-        </div>
-        <div class="news-controls">
-          <i id="prev" class="fa-solid fa-angle-left"></i>
-          <i id="next" class="fa-solid fa-angle-right"></i>
-          <i class="fa-solid fa-play"></i>
-          <p>01</p>
-          <p>05</p>
+          <div class="news-controls">
+            <i id="prev" class="fa-solid fa-angle-left"></i>
+            <i id="next" class="fa-solid fa-angle-right"></i>
+            <i class="fa-solid fa-play"></i>
+            <p>01</p>
+            <p>05</p>
+          </div>
         </div>
       </div>
     </section>
